--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: BayesianRenewalModels.Rpkg
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Package: BayesianRenewalModels
+Title: Bayesian nonparametric renewal modeling methods
+Version: 0.1.0
+Authors@R: person("Zach", "Horton", email = "whorton@ucsc.edu", role = c("aut", "cre"))
+Description: Wrapper library for the BayesianRenewalModels.jl Julia package.
+License: GPL-3
 Encoding: UTF-8
+Depends: R (>= 4.2.0)
+SystemRequirements: Julia (>= 1.9)
+Imports: JuliaCall
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
