--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,9 @@ export(build_dpsb_config)
 export(build_dslogitsb_config)
 export(build_gammamix_config)
 export(build_hrp_config)
-export(build_julia_interface)
 export(build_logitsb_config)
 export(build_mrp_config)
 export(build_uniformmix_config)
 export(build_weibull_config)
+export(fit_renewal_model)
+export(julia_interface)
