--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(build_dpsb_config)
 export(build_dslogitsb_config)
 export(build_gammamix_config)
 export(build_hrp_config)
+export(build_llhazardmix_config)
 export(build_logitsb_config)
 export(build_mrp_config)
 export(build_uniformmix_config)
