--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(build_gammamix_config)
 export(build_hrp_config)
 export(build_llhazardmix_config)
 export(build_logitsb_config)
+export(build_modrp_config)
 export(build_mrp_config)
 export(build_uniformmix_config)
 export(build_weibull_config)
